@@ -89,7 +89,9 @@ $ntypes = @types + 1;
 
 print OUTPUT <<EOT;
 #include <string.h>
+#include <stdlib.h>
 #include <stdio.h>
+#include <errno.h>
 
 $includes
 GtkType object_types[$ntypes];
@@ -177,7 +179,7 @@ output_signals (void)
   fp = fopen (signals_filename, "w");
   if (fp == NULL)
     {
-      g_warning ("Couldn't open output file: %s", signals_filename);
+      g_warning ("Couldn't open output file: %s : %s", signals_filename, strerror(errno));
       return;
     }
 
@@ -694,7 +696,7 @@ output_widget_hierarchy (void)
   fp = fopen (hierarchy_filename, "w");
   if (fp == NULL)
     {
-      g_warning ("Couldn't open output file: %s", hierarchy_filename);
+      g_warning ("Couldn't open output file: %s : %s", hierarchy_filename, strerror(errno));
       return;
     }
   output_hierarchy (fp, GTK_TYPE_OBJECT, 0);
@@ -739,7 +741,7 @@ output_args (void)
   fp = fopen (args_filename, "w");
   if (fp == NULL)
     {
-      g_warning ("Couldn't open output file: %s", args_filename);
+      g_warning ("Couldn't open output file: %s : %s", args_filename, strerror(errno));
       return;
     }
 
