@@ -1,3 +1,9 @@
+2005-09-15  Damon Chaplin  <damon@gnome.org>
+
+	* gtkdoc-scanobj.in: 
+	* gtkdoc-scangobj.in: patch from Stefan Kost to improve error messages,
+	though I changed it slightly so it doesn't output errno.
+
 2005-09-09  Damon Chaplin  <damon@gnome.org>
 
 	* gtkdoc-mkdb.in: 
